2003-01-31  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* field.cpp: Improve memory management.
	* field.h: Ditto.

2003-01-31  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* stack.cpp: Speed up field expansions.

2003-01-28  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Fix BlochStack.length().

2003-01-08  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Add SectionMode.n().

2003-01-08  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* expression.h: Copy expressions to avoid side-effects.
	* expressions.cpp: Ditto.
	* stack.cpp: Ditto.

2002-12-05  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* defs.h: Add backward modes option.
	* camfr_wrap.cpp: Ditto.

2002-12-02  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Add SectionMode.

2002-11-28  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* expression.h: Add remove_term_front.
	* expression.cpp: Ditto.

2002-11-28  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* S_scheme_fields.cpp: Improve detection of Diag and Mono.

2002-11-26  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* __init__.py: Remove enum definitions.

2002-11-26  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* cavity.h: Make more robust for user errors.
        * cavity.cpp: Ditto.

2002-11-26  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* defs.h: Add global.mode_surplus.
        * defs.cpp: Ditto.

2002-11-26  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Update to Boost release version.

2002-11-13  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* defs.h: Add series solver option.
	* camfr_wrap.cpp: Ditto.
	* __init__.py: Ditto.
	
2002-09-12  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* waveguide.cpp: Recalc if global.N changes.
	* scatterer.cpp: Ditto.

2002-09-12  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* field.h: Add abs_S.

2002-08-02  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* __init__.py: Import camfr_tk by default.
