@@ -280,11 +280,11 @@ Expression Expression::flatten() const
       flat_optim.add_term(*t);
   }
 
-  // Corner case if optimisation exposed a waveguide at the front of
-  // the expression, without a scatterer.
+  // Corner case if optimisation exposed a non-zero length waveguide 
+  // at the front of the expression, without a scatterer.
 
   Term* t0 = flat_optim.get_term(0);
-  if (t0->get_type() == WAVEGUIDE)
+  if ((t0->get_type() == WAVEGUIDE) && (abs(t0->get_d()) > 0))
   { 
     Scatterer* sc = interface_cache.get_interface(t0->get_wg(), t0->get_wg());
     flat_optim.insert_term_front(Term(*sc));
