@@ -1,5 +1,9 @@
 2003-01-31  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
+	* expression.cpp: Eliminate unneeded transparent scatterer.
+
+2003-01-31  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
 	* field.cpp: Improve memory management.
 	* field.h: Ditto.
 
